add docker file and add functionality of remote agent installation
