# src/main/java/cz/fel/cvut/beevidence_and_cyber/dto/AgentDeploymentRequest.java
@@ -1,0 +1,10 @@
+package cz.fel.cvut.beevidence_and_cyber.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record AgentDeploymentRequest(
+        String targetHost,
+        @NotBlank String username,
+        @NotBlank String password
+) {
+}
